# folio-gauge-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
prompts/: discovery.md  earnings.md  evaluator.md  fundamentals.md  macro.md  news.md  orchestrator.md  peers.md  portfolio.md  price_volume.md  sentiment.md  technical.md  trends.md
skills/: discovery.md  earnings.md  evaluator.md  fundamentals.md  macro.md  news.md  orchestrator.md  peers.md  portfolio.md  price_volume.md  sentiment.md  technical.md  trends.md
src/: config.py
src/agent/: graph.py  knowledge.py  nodes.py  prompts.py  scoring.py  state.py
src/analysts/: __init__.py  discovery.py  earnings.py  fundamentals.py  macro.py  news.py  peers.py  portfolio.py  price_volume.py  sentiment.py  technical.py  trends.py
src/mcp/: server.py
src/orchestrator/: __init__.py  aggregator.py  evaluator.py
src/portfolio/: loader.py  models.py
src/tools/: edgar.py  fred.py  market.py  news.py  peers.py  polymarket.py  (+4 more)
tests/: test_analyst_earnings.py  test_analyst_fundamentals.py  test_analyst_macro.py  test_analyst_news.py  test_analyst_peers.py  test_analyst_price_volume.py  test_analyst_sentiment.py  test_analyst_technical.py  test_analyst_trends.py  test_config.py  test_mode_discovery.py  test_mode_individual.py  test_mode_portfolio.py  test_orchestrator_e2e.py  test_tool_edgar.py  test_tool_fred.py  test_tool_market.py  test_tool_news.py  test_tool_peers.py  test_tool_polymarket.py  test_tool_sentiment.py  test_tool_stocktwits.py  test_tool_technical.py  test_tool_trends.py
(+1 files in other folders)
